--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -1,9 +1,22 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example </title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Profile</title>
 </head>
 <body>
-<h1>profile page</h1>
+<h1>my profile:</h1>
+<p>your info:</p>
+<p>username: <!--/*@thymesVar id="username" type="java.lang.String"*/-->
+<span th:text="${username}"></span></p>
+<p>email: <!--/*@thymesVar id="email" type="java.lang.String"*/-->
+<span th:text="${email}"></span></p>
+<p>role: <!--/*@thymesVar id="role" type="java.lang.String"*/-->
+<span th:text="${role}"></span></p>
+<p>level of subscription: <!--/*@thymesVar id="level" type="java.lang.String"*/-->
+<span th:text="${level}"></span></p>
 </body>
 </html>
