--- a/src/main/resources/templates/loginpage.html
+++ b/src/main/resources/templates/loginpage.html
@@ -24,6 +24,7 @@
         <li><a href="/profile">Profile</a></li>
         <li><a href="/createlink">Create your nicelink</a></li>
         <li><a href="/mylinks">My links</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </footer>
 
