--- a/src/main/resources/templates/notfound.html
+++ b/src/main/resources/templates/notfound.html
@@ -19,6 +19,7 @@
         <li><a href="/profile">Profile</a></li>
         <li><a href="/createlink">Create your nicelink</a></li>
         <li><a href="/mylinks">My links</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </footer>
 
